--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <footer>
             <p>Made with 💘 for you — because you deserve the world.</p>
-            <p>Forever & Always — <strong>Your Name</strong></p>
+            <p>Forever & Always — <strong>Your Sumkadi</strong></p>
         </footer>
     </div>
 
@@ -142,4 +142,5 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
