--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         <section class="timeline">
             <h2>⏳ Our Journey Together</h2>
             <div class="timeline-item">
-                <div class="date">March 15, 2023</div>
+                <div class="date">December 24, 2024</div>
                 <div class="event">The day we met — my heart skipped a beat ❤️</div>
             </div>
             <div class="timeline-item">
-                <div class="date">June 22, 2023</div>
+                <div class="date">January 11, 2025</div>
                 <div class="event">Our first trip together — under the stars ✨</div>
             </div>
             <div class="timeline-item">
@@ -100,7 +100,7 @@
                <em>If you prefer a link, click “Copy link”.</em></p>
             <div class="qr-wrapper">
                 <img id="qrImg" src="qr.png" alt="Secret QR code" class="qr-img"/>
-                <button id="copyQrLink" class="copy-btn">Copy link</button>
+                <!-- <button id="copyQrLink" class="copy-btn">Copy link</button> -->
             </div>
         </section>
 
@@ -144,3 +144,4 @@
 </body>
 
 </html>
+
