--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
         <section class="photo-gallery">
             <h2>📸 Our Beautiful Moments</h2>
             <div class="gallery">
-                <img src="images/photo1.jpg" alt="Us at the beach" class="photo"/>
-                <img src="images/photo2.jpg" alt="Candlelight dinner" class="photo"/>
-                <img src="images/photo3.jpg" alt="Adventure time!" class="photo"/>
-                <img src="images/photo4.jpg" alt="Just us being silly" class="photo"/>
+                <img src="images/IMG_3356.jpeg" alt="Our first Couple Photo" class="photo"/>
+                <img src="images/IMG_3859.jpeg" alt="Best Duo Ever" class="photo"/>
+                <img src="images/IMG_5155.jpeg" alt="Adventure time!" class="photo"/>
+                <img src="images/IMG_5440.jpeg" alt="Just us being silly" class="photo"/>
+                <img src="images/IMG_4890.jpeg" alt="Complimenting each other" class="photo"/>
             </div>
         </section>
 
@@ -144,4 +145,5 @@
 </body>
 
 </html>
+
 
