--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="images/IMG_3859.jpeg" alt="Best Duo Ever" class="photo"/>
                 <img src="images/IMG_5155.jpeg" alt="Adventure time!" class="photo"/>
                 <img src="images/IMG_5440.jpeg" alt="Just us being silly" class="photo"/>
-                <img src="images/IMG_4890.jpeg" alt="Complimenting each other" class="photo"/>
+                <!-- <img src="images/IMG_4890.jpeg" alt="Complimenting each other" class="photo"/> -->
             </div>
         </section>
 
@@ -145,5 +145,6 @@
 </body>
 
 </html>
+
 
 
